# devsync

./: Cargo.toml  README.md  devsync.policy.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ARCHITECTURE.md  BILLING_API.md  CUSTOMER_SUCCESS_PLAYBOOK.md  MIGRATION_GUIDE.md  MVP_SPEC.md  ONBOARDING.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PRICING_PACKAGING.md  ROADMAP.md  TODO_LAUNCH.md
docs/plans/: 2026-03-02-launch-hardening.md
docs/reports/: phase1-validation-2026-03-01.md  phase3-repo-validation-2026-03-01.md  phase3-validation-2026-03-01.md  phase4-validation-2026-03-01.md
scripts/: phase1-validate.sh  phase3-validate-repos.sh  phase3-validate.sh  phase4-validate.sh
src/: activation.rs  auth.rs  billing.rs  cli.rs  dashboard.rs  detect.rs  devcontainer.rs  doctor.rs  lockfile.rs  main.rs  policy.rs  registry.rs  roi.rs  secrets.rs  up.rs
tests/fixtures/: README.md
tests/fixtures/fullstack-next-postgres/: docker-compose.yml  package.json
tests/fixtures/node-npm/: package.json
tests/fixtures/node-pnpm-workspace/: package.json
tests/fixtures/node-yarn/: package.json
tests/fixtures/polyglot-monorepo/: Cargo.toml  docker-compose.yml  package.json  pyproject.toml
tests/fixtures/python-poetry/: pyproject.toml
tests/fixtures/python-uv/: pyproject.toml
tests/fixtures/rust-toolchain-file/: Cargo.toml
tests/fixtures/rust-toolchain-toml/: Cargo.toml
website/: README.md  app.js  index.html  privacy.html  styles.css  terms.html
