[package]
name = "devsync"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "DevSync CLI: reproducible developer environments for teams"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
which = "6.0"

[dev-dependencies]
tempfile = "3.12"
